gate asset types in front end, fix history page layout
